update README.md with new samples
